[package]
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
categories = [
    "api-bindings",
    "encoding",
]
description = "Idiomatic types for building a robust JSON API"
documentation = "https://docs.rs/json-api/0.4"
license = "MIT/Apache-2.0"
name = "json-api"
readme = "README.md"
repository = "https://github.com/zacharygolba/json-api-rs"
version = "0.4.1"
edition = "2021"

[badges.appveyor]
repository = "zacharygolba/json-api-rs"

[badges.circle-ci]
repository = "zacharygolba/json-api-rs"

[badges.codecov]
repository = "zacharygolba/json-api-rs"

[dependencies]
error-chain = "0.12.4"
http = "0.2.8"
indexmap = { version = "1.9.1", features = ["serde-1"] }
percent-encoding = "2.2.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_qs = "0.10.1"

[workspace]
members = ["rocket"]
